@@ -69,6 +69,7 @@ GType                  hd_notification_manager_get_type              (void);
 HDNotificationManager *hd_notification_manager_get                   (void);
 
 void                  hd_notification_manager_db_load                (HDNotificationManager *nm);
+void                  hd_notification_manager_db_commit_now          (HDNotificationManager *nm);
 
 gboolean               hd_notification_manager_notify                (HDNotificationManager *nm,
                                                                       const gchar           *app_name,
